# ubuntu-user-panel

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
src/: .env  auth.py  database.py  main.py  models.py  utils.py
src/systemd/: user-panel.service
static/: rules.md  style.css
templates/: admin.html  index.html  login.html  message.html  progress.html  user_dashboard.html  user_login.html
